WebInterface/PixelDemo.css
@font-face {
    font-family: "AudiTypeExtendedNormal";
    src: url("/fonts/AudiType-ExtendedNormal.woff2") format('woff');
}

@font-face {
    font-family: "AudiTypeExtendedBold";
    src: url("/fonts/AudiType-ExtendedBold.woff") format('woff');
    font-weight: bold;
}

:root {
	--playerWidth:700px;
	--playerHeight:394px;
	--fullscreenButtonWidth:30px;
	--fullscreenButtonHeight:30px;
}

html {
	font-size: 0.8rem;
}

body {
    background-color: white;
}

video{
	height: 100%;
	max-width: 100%;
}

#header {
	color: black;
	font-family: AudiTypeExtendedBold,verdana,sans-serif;
	font-size: 3.6rem;
	font-weight: 300;
    line-height: 4rem;
	padding: 20px;
	vertical-align: middle
}

#logo {
	padding: 20px;
}

.text {
	color: black;
	font-family: verdana,sans-serif;
	font-size: 1.8rem;
    line-height: 3rem;
	left: 10%;
	width: var(--playerWidth);
	position: relative;
}

#player {
	position: relative;
	margin-top: 10px;
	width: 100%;
	height: 0;
	z-index: 10;
	padding-bottom: 56.25%;
}

h2 { 
position: absolute;
width: 100%;
}

h2 span { 
   position: relative;
   color: white; 
   font: bold 14px verdana; 
   font-weight: 300;
   letter-spacing: 0px;  
   background: rgba(0, 0, 0, 0.5);
   padding: 8px; 
   bottom: 42px;
   vertical-align: bottom;
}

#configuration {
	position: absolute;
	z-index: 100;
	width: 100%;
	bottom: 0px;
	left: 0px;
	margin: 2px;
	vertical-align: bottom;
}

#button {
	float:left;
	background-color:#000;
	color: #FFF;
	padding: 2px;
	margin: 2px;
	cursor: pointer;
	width: 150px;
	height: var(--fullscreenButtonHeight);
	line-height: var(--fullscreenButtonHeight);
	vertical-align: middle;
	text-align: center;
	font-family:Verdana,sans-serif;
	font-weight:700;
	font-size:1.1rem;
}

#button:hover{
	background-color:#434c53;
}

.btn {
    /*margin: 4px*/
}

.configbutton {
    width: 150px !important
}

.wrapper {
    display: flex;
    align-items: stretch;
}

#sidebar {
    min-width: 250px;
    max-width: 250px;
    min-height: 100vh;
}

#sidebar.active {
    margin-left: -250px;
}

/*
    ADDITIONAL DEMO STYLE, NOT IMPORTANT TO MAKE THINGS WORK BUT TO MAKE IT A BIT NICER :)
*/
@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";


body {
    background: #fafafa;
}

p {
    font-size: 1.5em;
    font-weight: 500;
    line-height: 1.7em;
    color: #999;
}

a, a:hover, a:focus {
    color: inherit;
    text-decoration: none;
    transition: all 0.3s;
}

#content {
	margin-left: auto;
}

#sidebar {
    /* don't forget to add all the previously mentioned styles here too */
	background: #212f44;
    color: #fff;
    transition: all 0.3s;
}

#sidebarContent {
	max-height:100%;
	position:fixed;
	overflow-y:auto;
}


#sidebar .sidebar-header {
    padding: 20px;
    background: #212f44;
}

#sidebar ul.components {
    padding: 20px 0;
    border-bottom: 1px solid #212f44;
}

#sidebar ul p {
    color: #fff;
    padding: 10px;
}

#sidebar ul li a {
    padding: 10px;
    font-size: 1.1em;
    display: block;
}
#sidebar ul li a:hover {
    color: #7386D5;
    background: #fff;
}

#sidebar ul li.active > a, a[aria-expanded="true"] {
    color: #fff;
    background: #212f44;
	/*#f90;*/
}
ul ul a {
    font-size: 0.9em !important;
    padding-left: 30px !important;
    background: #354b6d;
}

a[data-toggle="collapse"] {
    position: relative;
}

.dropdown-toggle::after {
    display: block;
    position: absolute;
    top: 50%;
    right: 20px;
    transform: translateY(-50%);
}

@media (max-width: 768px) {
    #sidebar {
        margin-left: -250px;
    }
    #sidebar.active {
        margin-left: 0;
    }
	#content {
		margin-left: auto;
	}
}

#ck-fullscreen {
    width: var(--fullscreenButtonWidth);
	height: var(--fullscreenButtonHeight);
    background-color:#000;
    float:right;
    right:4px;
    margin:2px;
    padding:2px;
    position: relative;
}

#ck-fullscreen:hover {
	background-color:#434c53;
}

.fullscreen-btn{
	width: 100%;
	height: 100%;
}

/************************************************************/
/* Player full screen css (different event for each browser */
/************************************************************/
#player:-webkit-full-screen {
	width: 100%;
	height: 100%;
	left: 0%;
	margin-top: 0px;
	margin-bottom: 0px;
}

#player:-moz-full-screen {
	width: 100%;
	height: 100%;
	left: 0%;
	margin-top: 0px;
	margin-bottom: 0px;
}

#player:-ms-fullscreen {
	width: 100%;
	height: 100%;
	left: 0%;
	margin-top: 0px;
	margin-bottom: 0px;
}

#player:fullscreen {
	width: 100%;
	height: 100%;
	left: 0%;
	margin-top: 0px;
	margin-bottom: 0px;
}

#player.fullscreen {
	width: 100%;
	height: 100%;
	left: 0%;
	margin-top: 0px;
	margin-bottom: 0px;
	position: fixed;
	top: 0px;
	left: 0px;
}

#player.fullscreen #configuration{
	position: fixed;
}

#FillWindow{
	display: none;
}

